--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -55,7 +55,6 @@
   <div class="col">
     <h1>Make Reservation</h1>
     <form class="needs-validation" action="" method="post" novalidate>
-
       <div class="form-group mt-5">
         <label for="first_name">First Name:</label>
         <input type="text" name="first_name" class="form-control" required autocomplete="off">
@@ -70,7 +69,7 @@
       </div>
       <div class="form-group">
         <label for="">Phone Number:</label>
-        <input type="text" name="phone_number" class="form-control" required autocomplete="off">
+        <input type="text" name="phone" class="form-control" required autocomplete="off">
       </div>
 
       <hr>
